# WKOpenVR

./: .clang-format  .clang-tidy  .editorconfig  .gitignore  CHANGELOG.md  CMakeLists.txt  CONTRIBUTING.md  NOTICE  README.md  build.ps1  lint.ps1  quick.ps1  reload.ps1  test.ps1
.githooks/: pre-push
core/src/common/: BugReport.cpp  BugReport.h  CMakeLists.txt  CaptionsChatboxPacing.h  CaptionsRealtimeFlags.h  CaptionsSpeechModels.h  DashboardInputRuntimeGate.h  DebugLogging.cpp  DevTuning.cpp  DevTuning.h  DiagnosticsLog.cpp  DiagnosticsLog.h  DriverMemoryProbe.cpp  DriverMemoryProbe.h  FileLog.cpp  FileLog.h  HeadMountDriverSynthConfig.h  HostSupervisorBase.cpp  HostSupervisorBase.h  JsonUtil.cpp  JsonUtil.h  LogPaths.cpp  LogPaths.h  ModulePerf.cpp  ModulePerf.h  ModuleRegistry.cpp  ModuleRegistry.h  ModuleSafety.cpp  ModuleSafety.h  MotionGate.h  PowerShellCommand.cpp  PowerShellCommand.h  PredictionSmoothingMath.h  ProcessPerfLog.cpp  ProcessPerfLog.h  Protocol.h  ProtocolNames.h  ProtocolPayloads.h  ReanchorRamp.h  RecordingEnvelope.cpp  (+16 more)
core/src/driver/: CMakeLists.txt  DriverModule.h  DriverSynthCompose.h  FeatureFlags.cpp  FeatureFlags.h  FreezeHoldLogic.h  Hooking.cpp  Hooking.h  IPCServer.cpp  IPCServer.h  InterfaceHookInjector.cpp  InterfaceHookInjector.h  IsometryTransform.h  Logging.cpp  Logging.h  ServerTrackedDeviceProvider.cpp  ServerTrackedDeviceProvider.h  ServerTrackedDeviceProviderConfigPacking.cpp  ServerTrackedDeviceProviderConfigPacking.h  ServerTrackedDeviceProviderSmartShadow.cpp  ServerTrackedDeviceProviderTransforms.cpp  VRWatchdogProvider.h  WKOpenVR.cpp  dllmain.cpp
core/src/overlay/: AdbController.cpp  AdbController.h  AdbSetupWizard.cpp  BugReportUi.cpp  CMakeLists.txt  CalibrationAnchor.cpp  CalibrationAnchor.h  DashboardInputSafeOverlayLogic.h  DeviceFilters.cpp  DeviceFilters.h  DiscordPresenceComposer.cpp  DiscordPresenceComposer.h  FeaturePlugin.cpp  FeaturePlugin.h  FrameHitchLogic.h  IpcClientBase.cpp  IpcClientBase.h  IpcSendQueue.cpp  IpcSendQueue.h  ManifestRegistration.cpp  Migration.cpp  ModuleToggleUi.cpp  ModuleToggleUi.h  OverlayHotReload.cpp  OverlayHotReload.h  PerfHistory.h  PerfStatsHub.cpp  PerfStatsHub.h  README.md  SafeModeRecovery.cpp  SafeModeRecovery.h  ShellContext.cpp  ShellContext.h  ShellFooter.cpp  ShellFooter.h  ShellSettings.cpp  ShellSettings.h  ShellUi.cpp  ShellUi.h  ShellUiLogic.h  (+24 more)
lib/: CMakeLists.txt
modules/calibration/tests/: CMakeLists.txt  boundary_test_helpers.h  stubs.cpp  test_adb_controller.cpp  test_auto_lock_hysteresis.cpp  test_boundary.cpp  test_bounded_solve.cpp  test_calibration_anchor.cpp  test_calibration_auto_speed.cpp  test_calibration_calc.cpp  test_calibration_pose_sampling.cpp  test_calibration_progress.cpp  test_common_helpers.cpp  test_common_mode_coherence.cpp  test_configuration.cpp  test_continuous_correction.cpp  test_continuous_persist.cpp  test_continuous_precision_fusion.cpp  test_controller_input.cpp  test_custom_checks_gate.cpp  test_device_filters.cpp  test_drift_breaker.cpp  test_driver_synth.cpp  test_geometry_shift_detector.cpp  test_gravity_alignment.cpp  test_guardian_auto_apply.cpp  test_head_from_tracker_solve.cpp  test_head_mount_panel_logic.cpp  test_head_mount_preview.cpp  test_head_mount_shadow_offset.cpp  test_head_mount_source_guard.cpp  test_head_mount_visibility.cpp  test_lever_arm_covariance.cpp  test_locked_snap_recovery.cpp  test_motion_gate.cpp  test_motion_recording_retention.cpp  test_observability_gate.cpp  test_precision_weighted_relpose.cpp  test_prediction_smoothing.cpp  test_protocol.cpp  (+24 more)
modules/captions/tests/: CMakeLists.txt  captions_tests.cpp
modules/dynamicres/tests/: CMakeLists.txt  test_dynamic_resolution_logic.cpp  test_dynamic_resolution_profile.cpp  test_dynamic_resolution_streaming.cpp
modules/facetracking/tests/: CMakeLists.txt  calibration_tests.cpp  eyelid_sync_tests.cpp  face_signal_processor_tests.cpp  feature_flags_tests.cpp  module_sources_tests.cpp  osc_publish_tests.cpp  profile_tests.cpp  upstream_shape_map_tests.cpp  vergence_tests.cpp
modules/inputhealth/tests/: CMakeLists.txt  stubs.cpp  test_compensation_rules.cpp  test_health_summary.cpp  test_inputhealth_config_roundtrip.cpp  test_learning_rules.cpp  test_path_classifier.cpp  test_presence_counting.cpp  test_profile_prune.cpp  test_stick_deadzone.cpp  test_trigger_remap.cpp  test_ui_logic.cpp
modules/oscrouter/tests/: CMakeLists.txt  router_shutdown_tests.cpp  router_tests.cpp  test_oscrouter_ui_logic.cpp
modules/phantom/tests/: CMakeLists.txt  FakeDriverHost.h  test_blend_controller.cpp  test_body_completion_scenarios.cpp  test_body_completion_solver.cpp  test_body_prior_estimator.cpp  test_dead_reckoner.cpp  test_dropout_scenarios.cpp  test_dropout_state.cpp  test_frozen_tracker_invariant.cpp  test_ik_fallback.cpp  test_inference_shmem.cpp  test_passive_role_inference.cpp  test_phantom_metrics.cpp  test_phantom_replay_budget.cpp  test_phantom_replay_player.cpp  test_phantom_replay_proof.cpp  test_phantom_trajectory.cpp  test_phantom_ui_logic.cpp  test_pose_space.cpp  test_role_arbiter.cpp  test_role_catalog.cpp  test_snap_calibrate.cpp  test_tracker_model_catalog.cpp  test_virtual_tracker_lifecycle.cpp
modules/questapp/tests/: CMakeLists.txt  test_adb_controller.cpp  (+5 more)
tests/: CMakeLists.txt
tests/common/: CMakeLists.txt  test_devtuning.cpp  test_host_exit_action.cpp  test_host_hot_reload.cpp  test_powershell_command.cpp  test_recording_envelope.cpp  test_win32_command_line.cpp
tests/download/: FixtureServer.ps1  Run-DownloadTests.ps1
tests/driver/: CMakeLists.txt  test_freeze_hold_logic.cpp  test_module_registry.cpp  test_module_safety.cpp  test_safe_mode_recovery.cpp  test_sidecar_owner_lease.cpp
tests/e2e/: CMakeLists.txt  e2e_tests.cpp
tests/fixtures/: generate-fixtures.ps1
tests/ui/: CMakeLists.txt  test_bug_report.cpp  test_dashboard_input_safe_overlay_logic.cpp  test_frame_hitch_logic.cpp  test_ipc_client_deadline.cpp  test_ipc_send_queue.cpp  test_overlay_hot_reload.cpp  test_perf_history.cpp  test_ui_core.cpp  test_ui_responsive_logic.cpp
(+629 files in other folders)
